--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
 sqlparse==0.4.4
+stripe==7.12.0
 typing_extensions==4.9.0
 uritemplate==4.1.1
 uritools==4.0.2
