Dockerfile and docker-compose.yaml

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
-DATABASES_USER =
-DATABASES_PASSWORD =
+POSTGRES_DB =
+POSTGRES_USER =
+POSTGRES_PASSWORD =
+POSTGRES_HOST = 'db'
+POSTGRES_PORT = 5432
 SECRET_KEY =
 STRIPE_API_KEY =
+
+CELERY_BROKER_URL =
+CELERY_RESULT_BACKEND =
 
 EMAIL_HOST =
 EMAIL_PORT =
