--- a/.env.sample
+++ b/.env.sample
@@ -6,12 +6,9 @@ POSTGRES_PORT = 5432
 SECRET_KEY =
 STRIPE_API_KEY =
 
-CELERY_BROKER_URL =
-CELERY_RESULT_BACKEND =
+REDIS_LOCATION =
 
 EMAIL_HOST =
 EMAIL_PORT =
-EMAIL_USE_TLS =
-EMAIL_USE_SSL =
 EMAIL_HOST_USER =
 EMAIL_HOST_PASSWORD =
